Finished getting subtopics - to do web scraping

--- a/notebooks/benchmate_v003.ipynb
+++ b/notebooks/benchmate_v003.ipynb
@@ -920,23 +920,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "39dd31d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'subtopics': '{\"Early Beginnings of the Internet\":\"This section will explore the early history of the internet, including the development of the first networks and computers that laid the foundation for the modern-day internet. It should include information on the ARPANET, the first operational packet switching network, as well as key figures such as Vint Cerf and Bob Kahn who played a crucial role in its creation.\",\"The Internet\\'s Expansion and Commercialization\":\"This section will discuss how the internet expanded beyond its initial use by governments and universities to become accessible to the general public. It should cover topics such as the widespread adoption of the World Wide Web, the rise of commercial internet service providers, and the emergence of e-commerce and online services.\",\"Global Connectivity and Challenges\":\"This section will examine the impact of the internet on global connectivity, including its role in shaping modern society, culture, and communication. It should also discuss challenges such as cybersecurity threats, digital divides, and the ethics of internet governance, highlighting the ongoing need for innovation and regulation to ensure a safe and equitable online environment.\"}',\n",
-       " 'subtopic_headings': ['Early Beginnings of the Internet',\n",
-       "  \"The Internet's Expansion and Commercialization\",\n",
-       "  'Global Connectivity and Challenges'],\n",
-       " 'subtopic_descriptions': ['This section will explore the early history of the internet, including the development of the first networks and computers that laid the foundation for the modern-day internet. It should include information on the ARPANET, the first operational packet switching network, as well as key figures such as Vint Cerf and Bob Kahn who played a crucial role in its creation.',\n",
-       "  'This section will discuss how the internet expanded beyond its initial use by governments and universities to become accessible to the general public. It should cover topics such as the widespread adoption of the World Wide Web, the rise of commercial internet service providers, and the emergence of e-commerce and online services.',\n",
-       "  'This section will examine the impact of the internet on global connectivity, including its role in shaping modern society, culture, and communication. It should also discuss challenges such as cybersecurity threats, digital divides, and the ethics of internet governance, highlighting the ongoing need for innovation and regulation to ensure a safe and equitable online environment.']}"
+       "{'subtopics': '{\"Foundations of the Internet\": \"This section will discuss the early beginnings of the internet, including the development of the ARPANET in the 1960s and its impact on modern communication. It will also cover the role of Vint Cerf and Bob Kahn in creating the TCP/IP protocol, which remains a fundamental part of the internet\\'s infrastructure today.\", \\n \"Global Expansion and Commercialization\": \"This section will explore how the internet expanded globally throughout the 1980s and 1990s, with the emergence of commercial internet service providers (ISPs) and the development of web browsers like Mosaic and Netscape. It will also touch on the role of governments and corporations in shaping the internet\\'s early landscape.\", \\n \"Modern Internet and Beyond\": \"This section will examine the evolution of the internet into its current form, with a focus on the World Wide Web, social media platforms, and online communities. It will also discuss emerging trends and technologies that are likely to shape the future of the internet, such as artificial intelligence, blockchain, and the Internet of Things.\"}',\n",
+       " 'subtopic_headings': ['Foundations of the Internet',\n",
+       "  'Global Expansion and Commercialization',\n",
+       "  'Modern Internet and Beyond'],\n",
+       " 'subtopic_descriptions': [\"This section will discuss the early beginnings of the internet, including the development of the ARPANET in the 1960s and its impact on modern communication. It will also cover the role of Vint Cerf and Bob Kahn in creating the TCP/IP protocol, which remains a fundamental part of the internet's infrastructure today.\",\n",
+       "  \"This section will explore how the internet expanded globally throughout the 1980s and 1990s, with the emergence of commercial internet service providers (ISPs) and the development of web browsers like Mosaic and Netscape. It will also touch on the role of governments and corporations in shaping the internet's early landscape.\",\n",
+       "  'This section will examine the evolution of the internet into its current form, with a focus on the World Wide Web, social media platforms, and online communities. It will also discuss emerging trends and technologies that are likely to shape the future of the internet, such as artificial intelligence, blockchain, and the Internet of Things.']}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,8 @@
     "# Creating a final chain that combines the subtopic generation and extraction of the headings and descriptions\n",
     "final_chain = subtopic_chain | subtopic_extract\n",
     "\n",
-    "final_chain.invoke({\"topic\": \"The History of the Internet\", \"number_of_subtopics\": 3})"
+    "result = final_chain.invoke({\"topic\": \"The History of the Internet\", \"number_of_subtopics\": 3})\n",
+    "result"
    ]
   },
   {
@@ -953,14 +954,15 @@
    "id": "1204473b",
    "metadata": {},
    "source": [
-    "As we can see, the output of the pipeline includes the 'subtopics' key, which is the response from 'subtopic_chain' and also holds the keys 'subtopic_headings' and 'subtopic_descriptions' which were created by the RunnablePassthrough.\n",
-    "\n",
     "Let's dig into what is happening:\n",
     "* The output of the pipeline includes the 'subtopics' key - which is actually the output from the 'subtopic_chain'\n",
     "* The output also holds the keys 'subtopic_headings' and 'subtopic_descriptions' which we had used in the assign() function of the RunnablePassthrough\n",
+    "* The assign() function in RunnablePassthrough is assigning the variables declared within its function call as additional keys in the output dictionary\n",
+    "* The values of these keys in the dictionary are set to whatever value was assigned to it in the assign function call\n",
     "\n",
+    "So when this RunnablePassthrough is declared and added as the following link to the subtopic_chain, it is taking the output from the subtopic_chain and appending to its output the key and values in its assign function.\n",
     "\n",
-    "We can now cycle through the "
+    "Now that we have the descriptions of what we are to describe in each section, we need to gather material for the same. So we need keywords to search the web for the same. However, we cannot pass the full description of each heading as the search keywords. So let's have the LLM summarize the descriptions into keywords for targeted search results."
    ]
   },
   {
@@ -968,7 +970,7 @@
    "id": "f618c471",
    "metadata": {},
    "source": [
-    "# Step 3: Searchable Keywords"
+    "# Step 3: Get Search Queries"
    ]
   },
   {
