Proofread edits spellcheck and grammar corrections

--- a/notebooks/benchmate_v003.ipynb
+++ b/notebooks/benchmate_v003.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "Hello World!\n",
     "\n",
-    "In this notebook, I intend to explore fundamental concepts of [LangChain](https://www.langchain.com/). The term LangChain has rapidly become a common household term for anyone working in even the remote vicinity of AI/LLMs. However, for those that are looking to get into this domain and start exploring, it can be quite a frustrating task to understand where to start. In fact, due to a lack of access to a \"Beginners Guide\", I often see many people discouraged and give up before even starting! This is the first gap I hope to bridge with this notebook.\n",
+    "In this notebook, I intend to explore fundamental concepts of [LangChain](https://www.langchain.com/). The term LangChain has rapidly become a common household term for anyone working in the remote vicinity of AI/LLMs. However, for those that are looking to get into this domain and start exploring, it can be quite a frustrating task to understand where to start. In fact, due to a lack of access to a \"Beginners Guide\", I often see many people discouraged and give up before even starting. This is the first gap I hope to bridge with this notebook.\n",
     "\n",
-    "Additionally, I've come across numerous introductory articles and videos on LangChain that describe it in vague, abstract terms. These \"hazy explanations\" seem to be made with ill intent. Rather than spending time to learn concepts in-depth and teaching us how to implement them, these creators seek to have catchy clickbait titles with shallow explanations so that they can move on to churning more clickbait on other trending topics. After going through such content, I am left even more flustered and demotivated to explore further. The second gap I intend to address in this notebook is digesting concepts through implementation.\n",
+    "Additionally, I've come across numerous introductory articles and videos on LangChain that describe it in vague, abstract terms. These \"hazy explanations\" seem to be made with ill intent. Rather than spending time to learn concepts in-depth and teaching us how to implement them, these creators seek to have catchy clickbait titles with shallow explanations so that they can move on to churning more clickbait on other trending topics. The second gap I intend to address in this notebook is digesting concepts through implementation.\n",
     "\n",
     "**LangChain concepts I intend to address in this notebook:**\n",
     "1. What is LangChain?\n",
@@ -56,7 +56,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "**Please note, every time we get to a roadblock and not know how to proceed, AI is our friend!**\n",
+    "**Please note, every time we get to a roadblock and don't know how to proceed, AI is our friend!**\n",
     "\n",
     "Well, we now have a use case!\n",
     "\n",
@@ -78,7 +78,7 @@
     "1. Select a topic\n",
     "2. Break the report down into subtopics by identifying key elements\n",
     "3. Find references on each subtopic and create notes\n",
-    "4. Create the final report by summarize the notes on each topic into sections within the report\n",
+    "4. Create the final report by summarizing the notes\n",
     "\n",
     "In our flow, the user will be providing the topic as an input, so we do not have to be concerned with the AI selecting the topic. Additionally, we may want the user to provide the number of subtopics they are looking for. So, we will accept that as an input to the pipeline as well.\n",
     "\n",
@@ -106,9 +106,9 @@
    "source": [
     "## Ollama\n",
     "\n",
-    "First and foremost, while working with LLMs, we obviously need an LLM that we can call and get a response from. For this, there are multiple options:\n",
+    "First and foremost, while working with LLMs, we obviously need an LLM that we can get a response from. For this, there are multiple options:\n",
     "1. We can either use proprietary models (ex. GPT, Claude, Gemini, etc.) - This has an associated cost as each call will incur an expense\n",
-    "2. We can run open-source LLMs on our own system - This won't incur any costs but the models are not as powerful and latency is higher\n",
+    "2. We can run open-source LLMs and run them on our own systems - This won't incur any costs but the models are not as powerful and latency is higher\n",
     "\n",
     "For the purpose of this notebook, let's go with option 2 for now."
    ]
@@ -221,7 +221,7 @@
    "source": [
     "## Run Other LLMs\n",
     "\n",
-    "Well, now that we have gotten a response on a local instance of Llama 3.2 run locally, let's try the same question on some other LLM models!\n",
+    "Well, now that we have gotten a response from an instance of Llama 3.2 running locally, let's try the same question on some other LLM models!\n",
     "\n",
     "Let's try it on GPT!\n",
     "\n",
@@ -235,7 +235,7 @@
     "\n",
     "Nope, we need another library for that too. [Anthropic Python API library](https://github.com/anthropics/anthropic-sdk-python)\n",
     "\n",
-    "Also, please note. If you visit the links mentioned above, you will notice that it is not only the libraries that change. The class names that we need to import are different, the method names to make requests to the LLM are different, the response from the LLM has a different dictionary format, etc.\n",
+    "Also, please note. If you visit the links mentioned above, you will notice that it is not only the libraries that change. The class names that we need to import are different, the method names to make requests to the LLM are different, the response from the LLM has a different format, etc.\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
@@ -471,7 +471,7 @@
     "\n",
     "Well, we can extract the information from webpages (via web search) and provide this information as context. Awesome! But do we just search the whole topic and feed the LLM with the text from hundreds of links? That seems excessive. Also, especially if we are using proprietary LLMs, this would shoot the costs up by a lot. Let us try to be more targeted.\n",
     "\n",
-    "We can first ask the LLM to provide us the headings of the report (or subtopics). With each of these subtopics, we can perform more targeted information gathering exercise. Let's ask the LLM to provide us with potential subtopics for a report if it is provided a topic."
+    "We can first ask the LLM to provide us the headings of the report (or subtopics). With each of these subtopics, we can perform a more targeted information gathering exercise. Let's ask the LLM to provide us with potential subtopics for a given topic."
    ]
   },
   {
@@ -776,7 +776,7 @@
    "id": "23902809",
    "metadata": {},
    "source": [
-    "As we can see, we are getting the output requested. However, unlike the LLMChain, we are not getting a dictionary inclusive of the input elements. We are only getting what the LLMChain would've returned in the 'text' parameter.\n",
+    "As we can see, we are getting the requested output. However, unlike the LLMChain, we are not getting a dictionary inclusive of the input elements. We are only getting what the LLMChain would've returned in the 'text' parameter.\n",
     "\n",
     "Let's take a look at what type of object is returned by the pipe operation (the class of subtopic_chain)."
    ]
@@ -1952,7 +1952,7 @@
     "\n",
     "[image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEujYY3aHFup-p1Fw2e6Ljtd3n3H4zyqx9OA&s)\n",
     "\n",
-    "What we have achieved here is tremendous! No more homework for our children! They will never know the true suffering of spending a whole night to finish an essay and only getting a \"B+\". Now, they can get a B+ with no effort!\n",
+    "What we have achieved here is tremendous! No more homework for our children! They will never know the true suffering of spending a whole night to finish an essay to only end up with a \"B+\". Now, they can get a B+ with little to no effort!\n",
     "\n",
     "Of course we would need to do more improvements before our essay generator can produce A+ quality results. But we will end this module here for now. Hopefully, this gives you a starting point for using LangChain!"
    ]
