--- a/gen_ai/RAG_Pipeline_v001.ipynb
+++ b/gen_ai/RAG_Pipeline_v001.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7460c99b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4842b337",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f53dc5b",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b90ae80f",
    "metadata": {},
    "outputs": [
@@ -60,9 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading PDF file from: https://readindiabooks.com/ebook/PDF/1567798377_Indian_History_by_Krishna_Reddy@Sarkaripost.in_(2).pdf\n",
-      "Saving to: c:\\Users\\ssrim\\Documents\\Projects\\Kaggle\\classmate\\notebooks/tmp/sample.pdf\n",
-      "PDF file downloaded successfully.\n"
+      "PDF file already exists at: c:\\Users\\ssrim\\Documents\\Projects\\Kaggle\\classmate\\notebooks/tmp/sample.pdf\n",
+      "Skipping download.\n"
      ]
     }
    ],
@@ -122,6 +121,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "42ba655b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(metadata={'source': 'c:\\\\Users\\\\ssrim\\\\Documents\\\\Projects\\\\Kaggle\\\\classmate\\\\notebooks/tmp/sample.pdf', 'page': 0}, page_content='')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3503852d",
    "metadata": {},
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "33f12dc7",
    "metadata": {},
    "outputs": [],
