--- a/gen_ai/RAG_Pipeline_v001.ipynb
+++ b/gen_ai/RAG_Pipeline_v001.ipynb
@@ -61,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "Downloading PDF file from: https://readindiabooks.com/ebook/PDF/1567798377_Indian_History_by_Krishna_Reddy@Sarkaripost.in_(2).pdf\n",
-      "Saving to: c:\\Users\\ssrim\\Documents\\Projects\\Kaggle\\classmate\\notebooks/tmp/sample.pdf\n",
+      "Saving to: c:\\Users\\ssrim\\Documents\\Projects\\GIT\\classmate\\gen_ai/tmp/sample.pdf\n",
       "PDF file downloaded successfully.\n"
      ]
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f626f77c",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "26e1909a",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "33f12dc7",
    "metadata": {},
    "outputs": [],
